# luft

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json
crates/luft/: Cargo.toml
crates/luft-adapters/: Cargo.toml
crates/luft-adapters/src/: acp_adapter.rs  lib.rs  permission.rs  result_collector.rs  update_mapper.rs
crates/luft-cli/: Cargo.toml
crates/luft-cli/examples/: README.md  architecture-report.lua  comprehensive-audit.lua  coverage-100.lua  deep-research.lua  hello.lua  model-compare.lua  parallel-demo.lua  schema-demo.lua  schema-simple.lua
crates/luft-cli/src/: backend.rs  config.rs  logging.rs  main.rs
crates/luft-cli/src/commands/: artifact_writer.rs  backend.rs  clear.rs  event_log.rs  generate.rs  list.rs  logs.rs  lua_validate.rs  mcp_server.rs  mock.rs  mod.rs  phase_renderer.rs  phases.rs  run.rs  save.rs  status.rs  workflows.rs
crates/luft-cli/tests/: acp_adapter_structured_output.rs  acp_claude_model.rs  acp_opencode.rs  debug_bins.rs  runtime_e2e.rs  scheduler_registry.rs  structured_output_flow.rs
crates/luft-core/: Cargo.toml
crates/luft-core/src/: journal.rs  lib.rs  mock_backend.rs  mock_file_backend.rs  mock_gen.rs  run_dir.rs  state.rs  testing.rs
crates/luft-core/src/contract/: backend.rs  cache.rs  event.rs  finding.rs  mod.rs
crates/luft-core/src/scheduler/: config.rs  error.rs  mod.rs
crates/luft-mcp/: Cargo.toml
crates/luft-mcp/src/: lib.rs  protocol.rs  resources.rs  server.rs  tools.rs
crates/luft-planner/: Cargo.toml
crates/luft-planner/src/: lib.rs  meta.rs  types.rs
crates/luft-runtime/: Cargo.toml
crates/luft-runtime/src/: converge.rs  lib.rs  pipeline.rs  sandbox.rs
crates/luft-runtime/src/sdk/: agent.rs  control.rs  mod.rs  report.rs  task.rs  workflow.rs
crates/luft-runtime/src/sdk/agent/: journal.rs  parallel.rs  pmap.rs  single.rs
crates/luft-service/: Cargo.toml
crates/luft-service/src/: lib.rs  phases.rs  query.rs  run.rs
crates/luft-storage/: Cargo.toml
crates/luft-storage/src/: db.rs  error.rs  lib.rs  reader.rs  writer.rs
crates/luft/src/: builder.rs  error.rs  lib.rs  mcp.rs  prelude.rs
crates/maestro/: Cargo.toml
crates/maestro-adapters/: Cargo.toml
crates/maestro-adapters/src/: acp_adapter.rs  lib.rs  permission.rs  result_collector.rs  update_mapper.rs
crates/maestro-cli/: Cargo.toml
crates/maestro-cli/examples/: deep-research.lua  schema-demo.lua
crates/maestro-cli/src/: config.rs  (+3 more)
crates/maestro-core/: Cargo.toml
crates/maestro-mcp/: Cargo.toml
crates/maestro-mcp/src/: lib.rs  protocol.rs  resources.rs  server.rs  tools.rs
crates/maestro-planner/: Cargo.toml
crates/maestro-planner/src/: lib.rs  meta.rs
crates/maestro-runtime/: Cargo.toml
crates/maestro-runtime/src/: converge.rs  error.rs  lib.rs  pipeline.rs  sandbox.rs
crates/maestro-runtime/src/sdk/: agent.rs  control.rs  convert.rs  mod.rs  report.rs  task.rs  workflow.rs
crates/maestro-runtime/src/sdk/agent/: journal.rs  parallel.rs  pmap.rs  single.rs
crates/maestro-service/: Cargo.toml
crates/maestro-service/src/: lib.rs  phases.rs  query.rs  run.rs
crates/maestro-storage/: Cargo.toml
crates/maestro-storage/src/: db.rs  error.rs  lib.rs  reader.rs  writer.rs
crates/maestro/src/: builder.rs  error.rs  lib.rs  mcp.rs  prelude.rs
docs/: architecture.md  dynamic-workflow-guide.md  known-issues.md  roadmap.md  sdk-reference.md  upgrade-acp.md  workflow-authoring-guide.md
docs/architecture/: adapters.md  cli.md  commands.md  core.md  mcp.md  planner.md  runtime.md  service.md  storage.md
docs/design/: acp-raw-events.md  artifact-report-writer.md  backend-command.md  codex-acp-backend.md  event-logging.md  integration-testing.md  library-split.md  mcp-server.md  meta-extraction.md  p0-acp-backend.md  p0-planner-resume.md  phase-span-decomposition.md  phases-cli-v2.md  phases-cli.md  program-logging.md  sdk-events.md  service-layer-extraction.md  sqlite-persistence.md  structured-interaction-persistence.md  tui-interaction.md  tui.md  web-ui.md  websocket-server.md  ws-test.md
docs/dev/: adapters-smell-audit-report.json  logging-review.md  lua-workflow-spec.md  planner-review.md  web-ui-design.md  web-ui-dev-plan.md  web-ui-frontend-plan.md
docs/research/: adversarial-verification.md  claude-code-dynamic-workflows-deep-research-zh.md  claude-code-dynamic-workflows-deep-research.md  claude-dynamic-workflow-analysis.md  sdk-vs-claude-code-workflows.md
examples/: README.md  architecture-report.lua  comprehensive-audit.lua  converge-demo.lua  deep-research.lua  hello.lua  m3-model.lua  parallel-demo.lua  phased_hello.lua  pipeline-demo.lua  schema-demo.lua  schema-simple.lua
migrations/: 20250819000001_initial.sql  20250820000001_phase_meta.sql  20250820000002_retry_count.sql
scripts/: arch.lua  clean.lua  run_examples.sh  unittest.lua
src/: backend.rs  cli.rs  config.rs  lib.rs  logging.rs  lua_dsl_reference.md  main.rs  mcp.rs  mock_gen.rs  planner.rs  runtime.rs  signal.rs
src/adapters/: acp_adapter.rs  mod.rs  permission.rs  result_collector.rs  update_mapper.rs
src/commands/: artifact_writer.rs  backend.rs  clear.rs  event_log.rs  generate.rs  list.rs  logs.rs  lua_validate.rs  mcp_server.rs  mock.rs  mod.rs  phase_renderer.rs  phases.rs  run.rs  serve.rs  status.rs  watch.rs  workflows.rs
src/core/: journal.rs  mock_backend.rs  mock_file_backend.rs  mod.rs  run_dir.rs  state.rs
src/planner/: meta.rs
src/runtime/: converge.rs  error.rs  pipeline.rs  sandbox.rs
src/service/: phases.rs  query.rs  run.rs
src/storage/: db.rs  error.rs  mod.rs  reader.rs  writer.rs
src/tui/: app.rs  event_bridge.rs  input.rs  mod.rs  state.rs  theme.rs
src/ws/: config.rs  mod.rs  protocol.rs  registry.rs  server.rs
tests/: acp_adapter_structured_output.rs  acp_opencode.rs  runtime_e2e.rs  structured_output_flow.rs
web/: components.json  index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx
workflows/: adapters_smell_hunt.lua  boost-coverage.lua  codebase-health-audit.lua  rename_to_luft.lua  review_code.lua  tech-haiku.lua
(+109 files in other folders)
