[package]
name = "maestro"
version = "0.1.0"
edition = "2021"
description = "Maestro — multi-agent orchestration runtime (v0.1)"
license = "MIT"

# Standalone workspace: detach from the parent loom workspace so Maestro can be
# built, tested, versioned and released independently (see dev-plan §3).
[workspace]

[lib]
name = "maestro"
path = "src/lib.rs"

[[bin]]
name = "maestro"
path = "src/main.rs"

[features]
# Expose MockBackend to integration tests / downstream test harnesses.
testing = []

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["compat"] }
dashmap = "6"
agent-client-protocol = "0.14"
blake3 = "1"
unicode-normalization = "0.1"
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "serialize", "send"] }
jsonschema = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[profile.test]
opt-level = 2
debug = 1
