[workspace]
members = [
    "crates/maestro-core",
    "crates/maestro-storage",
    "crates/maestro-runtime",
    "crates/maestro-adapters",
    "crates/maestro-planner",
    "crates/maestro-service",
    "crates/maestro",
    "crates/maestro-mcp",
    "crates/maestro-cli",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hi-youichi/maestro"

[profile.test]
opt-level = 2
debug = 1
