[workspace]
members = [
    "crates/luft-core",
    "crates/luft-storage",
    "crates/luft-runtime",
    "crates/luft-adapters",
    "crates/luft-planner",
    "crates/luft-service",
    "crates/luft",
    "crates/luft-mcp",
    "crates/luft-cli",
]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/hi-youichi/luft"

[profile.test]
opt-level = 2
debug = 1
