[package]
name = "luft-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = ["luft", "agent", "orchestration", "cli", "lua"]
categories = ["command-line-utilities", "asynchronous"]
description = "Luft CLI — multi-agent orchestration runtime"

[[bin]]
name = "luft"
path = "src/main.rs"

[[bin]]
name = "fake_acp"
path = "src/bin/fake_acp.rs"

[features]
testing = ["luft/testing"]
unstable_end_turn_token_usage = ["luft/unstable_end_turn_token_usage"]

[dependencies]
luft = { path = "../luft", version = "0.3.1", features = ["testing"] }
luft-mcp = { path = "../luft-mcp", version = "0.3.1" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indicatif = "0.17"
console = "0.15"
dirs = "5"
toml = "0.8"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio-util = { version = "0.7", features = ["compat"] }
agent-client-protocol = { version = "0.14", features = ["unstable_end_turn_token_usage"] }
jsonschema = "0.18"
async-trait = "0.1"
blake3 = "1"
futures = "0.3"
dashmap = "6"
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "serialize", "send"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
