[package]
name = "luft-planner"
version = "0.3.2"
edition = "2021"
description = "NL to Lua workflow planner for Luft"
license = "MIT"
repository = "https://github.com/hi-youichi/luft"
keywords = ["luft", "agent", "orchestration", "lua", "planner"]
categories = ["asynchronous"]

[dependencies]
luft-core = { path = "../luft-core", version = "0.3.2" }
luft-runtime = { path = "../luft-runtime", version = "0.3.2" }
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "serialize", "send"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
