[package]
name = "luft-runtime"
version = "0.3.1"
edition = "2021"
description = "Lua orchestration runtime for Luft"
license = "MIT"
repository = "https://github.com/hi-youichi/luft"
keywords = ["luft", "agent", "orchestration", "lua"]
categories = ["asynchronous"]

[dependencies]
luft-core = { path = "../luft-core", version = "0.3.1" }
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "serialize", "send"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
dashmap = "6"
futures = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }
tempfile = "3"
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

[dev-dependencies]
luft-core = { path = "../luft-core", version = "0.3.1", features = ["testing"] }
