[package]
name = "luft-storage"
version = "0.3.0"
edition = "2021"
description = "SQLite persistence for Luft"
license = "MIT"
repository = "https://github.com/hi-youichi/luft"

[dependencies]
luft-core = { path = "../luft-core", version = "0.3.0" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "uuid", "json", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
thiserror = "1"
uuid = { version = "1", features = ["v7", "serde"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
