[package]
name = "maestro-planner"
version = "0.2.0"
edition = "2021"
description = "NL to Lua workflow planner for Maestro"
license = "MIT"

[dependencies]
maestro-core = { path = "../maestro-core" }
maestro-runtime = { path = "../maestro-runtime" }
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "serialize", "send"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
