[package]
name = "maestro-runtime"
version = "0.2.0"
edition = "2021"
description = "Lua orchestration runtime for Maestro"
license = "MIT"
repository = "https://github.com/hi-youichi/maestro"

[dependencies]
maestro-core = { path = "../maestro-core", version = "0.2.0" }
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "serialize", "send"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
dashmap = "6"
futures = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }
tempfile = "3"
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

[dev-dependencies]
maestro-core = { path = "../maestro-core", version = "0.2.0", features = ["testing"] }
