[package]
name = "maestro-service"
version = "0.2.0"
edition = "2021"
description = "Presentation-free run/query API for Maestro"
license = "MIT"
repository = "https://github.com/hi-youichi/maestro"

[dependencies]
maestro-core = { path = "../maestro-core", version = "0.2.0" }
maestro-runtime = { path = "../maestro-runtime", version = "0.2.0" }
maestro-storage = { path = "../maestro-storage", version = "0.2.0" }
maestro-planner = { path = "../maestro-planner", version = "0.2.0" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
tempfile = "3"
maestro-core = { path = "../maestro-core", version = "0.2.0", features = ["testing"] }
