[package]
name = "maestro"
version = "0.2.0"
edition = "2021"
description = "Maestro — multi-agent orchestration runtime"
license = "MIT"

[features]
testing = ["maestro-core/testing"]
unstable_end_turn_token_usage = ["maestro-adapters/unstable_end_turn_token_usage"]

[dependencies]
maestro-core = { path = "../maestro-core" }
maestro-storage = { path = "../maestro-storage" }
maestro-runtime = { path = "../maestro-runtime" }
maestro-adapters = { path = "../maestro-adapters" }
maestro-planner = { path = "../maestro-planner" }
maestro-service = { path = "../maestro-service" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
tempfile = "3"
maestro-core = { path = "../maestro-core", features = ["testing"] }
